--- a/assets/less/layouts/pages/_mgs.less
+++ b/assets/less/layouts/pages/_mgs.less
@@ -294,6 +294,9 @@ h3#submitted-name {
 	.contact {
 		width: 200px;
 	}
+	.header-name {
+		left: 70px;
+	}
 }
 
 @media (min-width: @screen-md-min) {
@@ -307,6 +310,7 @@ h3#submitted-name {
 			}
 		}
 	}
+	
 }
 
 @media (min-width: @screen-lg-min) {
